--- a/QuiMoritur/customsheet.html
+++ b/QuiMoritur/customsheet.html
@@ -199,7 +199,7 @@
 			<div class='sheet-col' style='width: 168px;'>
 				<div class='sheet-header' style='width: 95%; background-color: silver; color: black;'>ARTIFICE</div>
 				<label class='sheet-skill'>WEAPON</label><input type='text' style='width: 45px; text-align: center;' name='attr_weapon' />
-				<label class='sheet-skill'>ARMOR</label><input type='text' style='width: 45px; text-align: center;' name='attr_armor' />
+				<label class='sheet-skill'>ARMOR</label><input type='text' style='width: 45px; text-align: center;' name='attr_armorskill' />
 				<label class='sheet-skill'>AMMUNITION</label><input type='text' style='width: 45px; text-align: center;' name='attr_ammunition' />
 				<label class='sheet-skill'>TRADE TOOL</label><input type='text' style='width: 45px; text-align: center;' name='attr_tradetool' />
 				<label class='sheet-skill'>COMPONENT</label><input type='text' style='width: 45px; text-align: center;' name='attr_component' />
